// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class I bilateral DE 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 31, 35). Rest mesial + Proximal plate distal (house spec: covers 1/2 to 2/3 of the occluso-gingival height of the distal proximal surface — Kratochvil-vs-Krol compromise, Retainers p. 31) + I-bar engaging 0.01" mid-buccal undercut at gingival 1/3. I-bar geometry: 3 mm horizontal arm + 1.5 mm vertical engagement (Retainers p. 32). Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm. When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "role": "primary",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 20,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 31, 35). Rest mesial + Proximal plate distal (house spec: covers 1/2 to 2/3 of the occluso-gingival height of the distal proximal surface — Kratochvil-vs-Krol compromise, Retainers p. 31) + I-bar engaging 0.01" mid-buccal undercut at gingival 1/3. I-bar geometry: 3 mm horizontal arm + 1.5 mm vertical engagement (Retainers p. 32). Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm. When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "role": "primary",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 29,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        18,
        19,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        30,
        31,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial occlusal rest",
      "source": "kennedy-i-bilateral",
      "tier": "strong",
      "tooth": 28,
    },
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial occlusal rest",
      "source": "kennedy-i-bilateral",
      "tier": "strong",
      "tooth": 21,
    },
  ],
  "kennedy": {
    "class": "I",
    "deSide": null,
    "description": "Kennedy Class I",
    "modSpans": [],
    "modifications": 0,
    "primarySpans": [
      {
        "afterBound": 20,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          30,
          31,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 20,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          30,
          31,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#20: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.
#21: Mesial rest.
#28: Mesial rest.
#29: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.

#18-19: Open lattice with distal tissue stop.
#30-31: Open lattice with distal tissue stop.

Lingual bar: superior border ≥3 mm below gingival margins of remaining mandibular teeth (spec). Inferior border at functional vestibular depth (do not impinge on lingual frenum). Half-pear cross-section, 4 mm vertical height minimum.
Lingual sulcus depth requirement: ≥8 mm (verify clinically before approving design).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector.
Relief: 0.5 mm relief over the genial tubercles, mylohyoid ridge, and external oblique ridge (mandatory per protocol).

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via the gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Block out: all undercuts NOT engaged by clasps have been blocked out on the master cast with hard baseplate wax (per surveyor protocol). Lab to verify block-out integrity before duplicating cast for framework investing.

Distal extension saddle acrylic: must engage the sulcus IN ITS ENTIRETY — BOTH buccally AND lingually (Huddle 6 Q11 — verbatim rule). Maximum tissue contact distributes occlusal load across the residual ridge and resists framework rotation under load.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient lingual sulcus space exists (≥8 mm from gingival margin to floor of mouth). Half-pear cross-section, 4 mm vertical height, superior border ≥3 mm below gingival margins. Minimal tissue coverage, easiest for patient to adapt to.",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class I (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class II Mod 1 (Design Case I lower) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly when RPI is contraindicated (vestibular depth <5 mm, undercut location mid-mesial/MB/DB). Cast rest + 18ga wrought-wire C-clasp arm engaging 0.02" undercut; wrought wire flexes more than cast metal under stress. (soft tissue undercut >1mm at 4–5mm below the buccal gingival margin)",
      "claspTier": "strong",
      "claspType": "Combination",
      "contraindications": [
        {
          "key": "soft-tissue-undercut",
          "text": "soft tissue undercut >1mm at 4–5mm below the buccal gingival margin",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "18ga wrought wire retentive arm engaging 0.02" mesio-buccal undercut",
      "role": "primary",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 21,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 29,
    },
    {
      "claspAlternative": "Ring clasp",
      "claspAlternativeRationale": "Ring clasp is the alternative for tilted terminal molars with lingual undercut: ~360° encirclement with primary mesial occlusal rest + distal auxiliary rest + supportive strut. Both Reverse Akers AND Ring are acceptable for this scenario (Huddle 6 Q10).",
      "claspAlternatives": null,
      "claspRationale": "Used when ONLY a mesial/lingual undercut is available on a bicuspid or cuspid (NEVER molar — aspiration risk per Retainers PDF p. 27). Cast clasp originates from the distal aspect of the tooth and wraps to engage a mesio-lingual undercut. Tier-downgraded for molars (use Combination or Embrasure instead). (retentive arm engages disto-lingual undercut) — Huddle 6 Q10 carve-out: lingually inclined terminal molar permits Reverse Akers (or Ring clasp). The tilt makes lingual surface the practical engagement location.",
      "claspTier": "common",
      "claspType": "Reverse Akers",
      "contraindications": [
        {
          "key": "undercut-location",
          "text": "usable undercut not at mid-buccal/mesio-buccal (disto-lingual)",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-lingual",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast buccal reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination) / #4 round (refinement)",
        "dimensions": "1/4 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #8 round bur outline + #6 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast retentive arm engaging 0.01" disto-lingual undercut",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 31,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        18,
        19,
        20,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        30,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": "If the indirect retainer's chosen tooth has compromised support, the next-best tooth in the priority class (canine ↔ premolar) can be used. Geometric perpendicular ranking is a refinement, not a hard rule — instructor judgment can pick a different anterior tooth if support is inadequate at the geometric ideal.",
      "dualRole": false,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II. Indirect retainer placement chosen via diagonal fulcrum-line geometry (McCracken Fig 8-2 C): fulcrum endpoints #21 (DE terminal) and #31 (opposite-side distalmost); perpendicular projection from fulcrum midpoint = 15.5 mm anterior. Among the preferred tooth types on opposite side, this tooth has the greatest anteriority.",
      "restType": "mesial occlusal rest",
      "source": "fulcrum-diagonal-perpendicular",
      "tier": "common",
      "tooth": 28,
    },
  ],
  "kennedy": {
    "class": "II",
    "deSide": "left",
    "description": "Kennedy Class II Modification 1",
    "modSpans": [
      {
        "afterBound": 31,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          30,
        ],
        "type": "tooth-supported",
      },
    ],
    "modifications": 1,
    "primarySpans": [
      {
        "afterBound": 21,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
          20,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 21,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
          20,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": 31,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          30,
        ],
        "type": "tooth-supported",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#21: Distal proximal plate, Mesial rest, Combination clasp engaging 0.02" MB undercut, Lingual reciprocal plate.
#28: Mesial rest.
#29: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" MB undercut, Lingual reciprocal clasp.
#31: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DL undercut, Buccal reciprocal clasp.

#18-20: Open lattice with distal tissue stop.
#30: Open lattice.

Lingual bar: superior border ≥3 mm below gingival margins of remaining mandibular teeth (spec). Inferior border at functional vestibular depth (do not impinge on lingual frenum). Half-pear cross-section, 4 mm vertical height minimum.
Lingual sulcus depth requirement: ≥8 mm (verify clinically before approving design).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector.
Relief: 0.5 mm relief over the genial tubercles, mylohyoid ridge, and external oblique ridge (mandatory per protocol).

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via the gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Block out: all undercuts NOT engaged by clasps have been blocked out on the master cast with hard baseplate wax (per surveyor protocol). Lab to verify block-out integrity before duplicating cast for framework investing.

Distal extension saddle acrylic: must engage the sulcus IN ITS ENTIRETY — BOTH buccally AND lingually (Huddle 6 Q11 — verbatim rule). Maximum tissue contact distributes occlusal load across the residual ridge and resists framework rotation under load.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient lingual sulcus space exists (≥8 mm from gingival margin to floor of mouth). Half-pear cross-section, 4 mm vertical height, superior border ≥3 mm below gingival margins. Minimal tissue coverage, easiest for patient to adapt to.",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class II (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class III single tooth (#19) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination) / #4 round (refinement)",
        "dimensions": "1/4 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #8 round bur outline + #6 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" disto-buccal undercut",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 18,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 20,
    },
    {
      "claspAlternative": "Single Akers on this tooth (forgoing the embrasure pair) — less retention but simpler if the partner tooth has poor undercut access.",
      "claspAlternativeRationale": "Embrasure provides superior bilateral retention but requires an acceptable buccal undercut + suitable occlusal embrasure on BOTH teeth. If either fails clinical evaluation, fall back to a single Akers on the most posterior premolar/molar on this side.",
      "claspRationale": "Clasp of choice for a quadrant with no edentulous space (Class III mod 0 where retention is needed on a quadrant where no teeth are missing). Two opposing C-clasps cradle adjacent teeth at the embrasure; each engages a 0.01" undercut. Requires a prepped occlusal rest seat at the embrasure between the two teeth. This Embrasure clasp provides PRIMARY cross-arch retention paired with #31, required to satisfy the bilateral direct-retention invariant. Without it the design would be unilateral (Nesbit) — PROHIBITS Nesbit RPDs (Final RPD Huddle 2 answer key Q2, aspiration risk).",
      "claspTier": "strong",
      "claspType": "Embrasure",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": null,
      "guidePlaneRationale": null,
      "isPrimaryAbutment": true,
      "pairedWith": 31,
      "reciprocation": {
        "rationale": "Embrasure clasps are mutually reciprocating — each buccal arm has a matching lingual/palatal arm; insertion force on one tooth is counteracted by the corresponding arm on the partner tooth.",
        "text": "Lingual reciprocal clasp arm (the matching half of the Embrasure assembly self-reciprocates)",
        "type": "arm",
      },
      "restRationale": "Shared occlusal embrasure rest between #30 and #31; provides vertical support for the continuous Embrasure clasp assembly. Prepared at the marginal ridge of each tooth so the shared rest spans the contact.",
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination)",
        "dimensions": "spoon-shaped depression 1.5 mm deep × 2.5 mm M-D × 2.5 mm B-L at the embrasure shared with #31",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast C-clasp arm engaging 0.01" buccal undercut on #30, continuous with the opposing arm on #31 via the shared embrasure rest",
      "role": "embrasure-retention",
      "spanType": "no-span-contralateral-retention",
      "surveyCrown": null,
      "tooth": 30,
    },
    {
      "claspAlternative": "Single Akers on this tooth (forgoing the embrasure pair) — less retention but simpler if the partner tooth has poor undercut access.",
      "claspAlternativeRationale": "Embrasure provides superior bilateral retention but requires an acceptable buccal undercut + suitable occlusal embrasure on BOTH teeth. If either fails clinical evaluation, fall back to a single Akers on the most posterior premolar/molar on this side.",
      "claspRationale": "Clasp of choice for a quadrant with no edentulous space (Class III mod 0 where retention is needed on a quadrant where no teeth are missing). Two opposing C-clasps cradle adjacent teeth at the embrasure; each engages a 0.01" undercut. Requires a prepped occlusal rest seat at the embrasure between the two teeth. This Embrasure clasp provides PRIMARY cross-arch retention paired with #30, required to satisfy the bilateral direct-retention invariant. Without it the design would be unilateral (Nesbit) — PROHIBITS Nesbit RPDs (Final RPD Huddle 2 answer key Q2, aspiration risk).",
      "claspTier": "strong",
      "claspType": "Embrasure",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": null,
      "guidePlaneRationale": null,
      "isPrimaryAbutment": true,
      "pairedWith": 30,
      "reciprocation": {
        "rationale": "Embrasure clasps are mutually reciprocating — each buccal arm has a matching lingual/palatal arm; insertion force on one tooth is counteracted by the corresponding arm on the partner tooth.",
        "text": "Lingual reciprocal clasp arm (the matching half of the Embrasure assembly self-reciprocates)",
        "type": "arm",
      },
      "restRationale": "Shared occlusal embrasure rest between #31 and #30; provides vertical support for the continuous Embrasure clasp assembly. Prepared at the marginal ridge of each tooth so the shared rest spans the contact.",
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination)",
        "dimensions": "spoon-shaped depression 1.5 mm deep × 2.5 mm M-D × 2.5 mm B-L at the embrasure shared with #30",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast C-clasp arm engaging 0.01" buccal undercut on #31, continuous with the opposing arm on #30 via the shared embrasure rest",
      "role": "embrasure-retention",
      "spanType": "no-span-contralateral-retention",
      "surveyCrown": null,
      "tooth": 31,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        19,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [],
  "kennedy": {
    "class": "III",
    "deSide": null,
    "description": "Kennedy Class III",
    "modSpans": [],
    "modifications": 0,
    "primarySpans": [
      {
        "afterBound": 20,
        "beforeBound": 18,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          19,
        ],
        "type": "tooth-supported",
      },
    ],
    "spans": [
      {
        "afterBound": 20,
        "beforeBound": 18,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          19,
        ],
        "type": "tooth-supported",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#18: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DB undercut, Lingual reciprocal clasp.
#20: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" MB undercut, Lingual reciprocal clasp.
#30: Distal rest, Embrasure clasp engaging 0.01" mid-buccal undercut, Lingual reciprocal clasp.
#31: Mesial rest, Embrasure clasp engaging 0.01" mid-buccal undercut, Lingual reciprocal clasp.

#19: Open lattice.

Lingual bar: superior border ≥3 mm below gingival margins of remaining mandibular teeth (spec). Inferior border at functional vestibular depth (do not impinge on lingual frenum). Half-pear cross-section, 4 mm vertical height minimum.
Lingual sulcus depth requirement: ≥8 mm (verify clinically before approving design).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector.
Relief: 0.5 mm relief over the genial tubercles, mylohyoid ridge, and external oblique ridge (mandatory per protocol).

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via the gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Block out: all undercuts NOT engaged by clasps have been blocked out on the master cast with hard baseplate wax (per surveyor protocol). Lab to verify block-out integrity before duplicating cast for framework investing.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient lingual sulcus space exists (≥8 mm from gingival margin to floor of mouth). Half-pear cross-section, 4 mm vertical height, superior border ≥3 mm below gingival margins. Minimal tissue coverage, easiest for patient to adapt to.",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "I",
        "rationale": "Kennedy Class III, ≤3 teeth missing — tooth-supported in single sextant.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class I — appropriate for predoctoral / general dentistry care.",
    "class": "I",
    "classNum": 1,
    "drivers": [
      "location",
      "abutment condition",
      "occlusion",
      "residual ridge",
    ],
  },
  "redFlags": [
    {
      "message": "Nesbit (unilateral cantilever) RPD is PROHIBITED per Final RPD Huddle 2 answer key Q2 — aspiration risk. The span-derived abutments alone would have been unilateral, so the engine satisfied the bilateral direct-retention invariant by adding cross-arch retention. Engine added Embrasure clasp pair on #30 + #31 for the required contralateral retention. Confirm RPD is the appropriate modality for this short unilateral span; a fixed solution (FPD or implant) is often preferable for Class III mod 0. If the patient declines fixed treatment, this RPD design is acceptable.",
      "severity": "info",
      "type": "nesbit-prohibition",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Maxillary Class II Mod 3 (Design Case I) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination) / #4 round (refinement)",
        "dimensions": "1/4 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #8 round bur outline + #6 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" disto-buccal undercut",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 2,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 4,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface. Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment. Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "distal",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 6,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface. Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment. Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "1.5 mm diameter hemispherical depression on distal line angle of central incisor lingual surface",
        "surface": "mesial",
        "type": "ball",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 9,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface. Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment. Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "mesial",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 11,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly when RPI is contraindicated (vestibular depth <5 mm, undercut location mid-mesial/MB/DB). Cast rest + 18ga wrought-wire C-clasp arm engaging 0.02" undercut; wrought wire flexes more than cast metal under stress. (vestibular depth ≤5mm)",
      "claspTier": "strong",
      "claspType": "Combination",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
        {
          "key": "frenum",
          "text": "high frenum in I-bar approach path",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm. Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "18ga wrought wire retentive arm engaging 0.02" mesio-buccal undercut",
      "role": "primary",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 12,
    },
  ],
  "axiumCode": "D5213",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        3,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        5,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": "Open Lattice",
      "alternativeRationale": "For a single or paired anterior tooth in the smile zone, Mesh reduces visible acrylic bulk. Open Lattice is acceptable when maximum retention matters more than esthetics (e.g., heavily resorbed ridge needing the broader retention footprint).",
      "note": undefined,
      "rationale": "Used where there is limited inter-occlusal space (Denture Base Considerations p. 13). Fine metal mesh provides acrylic retention with thinner profile than Open Lattice. Preferred for anterior spans ≥3 teeth (esthetic-bulk reduction). rule of thumb: mesh anterior / lattice posterior in mixed cases.",
      "spanTeeth": [
        7,
        8,
      ],
      "tier": "common",
      "type": "Mesh",
    },
    {
      "alternative": "Open Lattice",
      "alternativeRationale": "For a single or paired anterior tooth in the smile zone, Mesh reduces visible acrylic bulk. Open Lattice is acceptable when maximum retention matters more than esthetics (e.g., heavily resorbed ridge needing the broader retention footprint).",
      "note": undefined,
      "rationale": "Used where there is limited inter-occlusal space (Denture Base Considerations p. 13). Fine metal mesh provides acrylic retention with thinner profile than Open Lattice. Preferred for anterior spans ≥3 teeth (esthetic-bulk reduction). rule of thumb: mesh anterior / lattice posterior in mixed cases.",
      "spanTeeth": [
        10,
      ],
      "tier": "common",
      "type": "Mesh",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        13,
        14,
        15,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": "If the indirect retainer's chosen tooth has compromised support, the next-best tooth in the priority class (canine ↔ premolar) can be used. Geometric perpendicular ranking is a refinement, not a hard rule — instructor judgment can pick a different anterior tooth if support is inadequate at the geometric ideal.",
      "dualRole": true,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II. Per McCracken Fig 8-2 D, this tooth's anterior position relative to the diagonal fulcrum line (#12–#2) permits dual-role direct + indirect retention; no separate IR tooth is needed.",
      "restType": "mesial cingulum rest",
      "source": "fulcrum-diagonal-perpendicular",
      "tier": "common",
      "tooth": 6,
    },
  ],
  "kennedy": {
    "class": "II",
    "deSide": "left",
    "description": "Kennedy Class II Modification 4",
    "modSpans": [
      {
        "afterBound": 4,
        "beforeBound": 2,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          3,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 9,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 9,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          10,
        ],
        "type": "tooth-supported",
      },
    ],
    "modifications": 4,
    "primarySpans": [
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 4,
        "beforeBound": 2,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          3,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 9,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 9,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          10,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for maxillary RPD.

Major connector: A-P Strap with 0.5mm beading on the tissue side.

* Exact undercuts to engage are marked in red. *

#2: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DB undercut, Palatal reciprocal clasp.
#4: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" MB undercut, Palatal reciprocal clasp.
#6: Distal proximal plate, Cingulum rest.
#9: Mesial proximal plate, Mesial ball rest.
#11: Mesial proximal plate, Cingulum rest.
#12: Distal proximal plate, Mesial rest, Combination clasp engaging 0.02" MB undercut, Palatal reciprocal plate.

#3: Open lattice.
#5: Open lattice.
#7-8: Mesh.
#10: Mesh.
#13-15: Open lattice with distal tissue stop.

Relief: 0.5 mm relief over the incisive papilla and median palatal raphe (mandatory per protocol).
Anterior strap: 6 mm posterior to gingival margins of anterior teeth, 8 mm wide.
Posterior strap: 6 mm anterior to vibrating line, 6-8 mm wide.
Lateral straps: ≥4 mm wide; cross the palate at oblique angle for tongue comfort.
Beading: 0.5 mm finish-line beading on the tissue side of both anterior and posterior straps (per LabRx Example p. 2 — improves border seal and prevents food impaction).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector; smooth, polished tongue-facing surface.

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via the gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Block out: all undercuts NOT engaged by clasps have been blocked out on the master cast with hard baseplate wax (per surveyor protocol). Lab to verify block-out integrity before duplicating cast for framework investing.

Distal extension saddle acrylic: must COMPLETELY engage the BUCCAL sulcus (Huddle 6 Q11). Palatal coverage is provided by the major connector — saddle extension is buccal-only on the maxilla.

Please return for try-in. Thank you.",
  "majorConnector": {
    "note": "0.5mm beading on tissue side",
    "rationale": "Rigid major connector of choice for Maxillary Kennedy Class I and II. Two transverse straps (8 mm anterior, 6-8 mm posterior) connected laterally provide cross-arch rigidity essential for distal extension support.",
    "tier": "strong",
    "type": "A-P Strap",
    "width": "8mm each strap, 6mm gingival clearance",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class II (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
    {
      "message": "Vestibular depth ≤5mm: I-bar approach is contraindicated arch-wide. RPI assemblies have been switched to Combination Clasp.",
      "severity": "info",
      "type": "vestibular-depth",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Maxillary few teeth (Full Palate case) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 31, 35). Rest mesial + Proximal plate distal (house spec: covers 1/2 to 2/3 of the occluso-gingival height of the distal proximal surface — Kratochvil-vs-Krol compromise, Retainers p. 31) + I-bar engaging 0.01" mid-buccal undercut at gingival 1/3. I-bar geometry: 3 mm horizontal arm + 1.5 mm vertical engagement (Retainers p. 32). Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm. When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "role": "primary",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 4,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface. Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment. Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "distal",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "role": "primary",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 6,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface. Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment. Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "mesial",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "role": "primary",
      "spanType": "anterior",
      "surveyCrown": null,
      "tooth": 11,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 31, 35). Rest mesial + Proximal plate distal (house spec: covers 1/2 to 2/3 of the occluso-gingival height of the distal proximal surface — Kratochvil-vs-Krol compromise, Retainers p. 31) + I-bar engaging 0.01" mid-buccal undercut at gingival 1/3. I-bar geometry: 3 mm horizontal arm + 1.5 mm vertical engagement (Retainers p. 32). Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "1/3 B-L width × 2/3 length cervically from marginal ridge (Lab 5 p. 5)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion. Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm. When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "1/3 M-D × 1/3 B-L × 1.5 mm marginal-ridge reduction; spoon-shaped; floor inclines 20° axially toward tooth center; #6 round bur outline + #4 axial (Lab 5 p. 8)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "role": "primary",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 12,
    },
  ],
  "axiumCode": "D5213",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        2,
        3,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        5,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": "Open Lattice",
      "alternativeRationale": "Mesh is the preferred choice for anterior spans ≥3 teeth (esthetic-bulk preference reduces acrylic bulk in the visible zone). Open Lattice is also acceptable and provides slightly more acrylic retention.",
      "note": undefined,
      "rationale": "Used where there is limited inter-occlusal space (Denture Base Considerations p. 13). Fine metal mesh provides acrylic retention with thinner profile than Open Lattice. Preferred for anterior spans ≥3 teeth (esthetic-bulk reduction). rule of thumb: mesh anterior / lattice posterior in mixed cases.",
      "spanTeeth": [
        7,
        8,
        9,
        10,
      ],
      "tier": "common",
      "type": "Mesh",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops. Border-mold the denture base into the vestibule like a complete denture. Acrylic base permits reline/rebase; metal bases are CONTRAINDICATED for distal extensions and recent extraction sites because they cannot be relined.",
      "spanTeeth": [
        13,
        14,
        15,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial cingulum rest",
      "source": "kennedy-i-bilateral",
      "tier": "strong",
      "tooth": 6,
    },
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial cingulum rest",
      "source": "kennedy-i-bilateral",
      "tier": "strong",
      "tooth": 11,
    },
  ],
  "kennedy": {
    "class": "I",
    "deSide": null,
    "description": "Kennedy Class I Modification 2",
    "modSpans": [
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": true,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
          9,
          10,
        ],
        "type": "anterior",
      },
    ],
    "modifications": 2,
    "primarySpans": [
      {
        "afterBound": 4,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          2,
          3,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 4,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          2,
          3,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": true,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
          9,
          10,
        ],
        "type": "anterior",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for maxillary RPD.

Major connector: Full Palatal Plate with 0.5mm beading on the tissue side.

* Exact undercuts to engage are marked in red. *

#4: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.
#6: Distal proximal plate, Cingulum rest.
#11: Mesial proximal plate, Cingulum rest.
#12: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.

#2-3: Open lattice with distal tissue stop.
#5: Open lattice.
#7-10: Mesh.
#13-15: Open lattice with distal tissue stop.

Relief: 0.5 mm relief over the incisive papilla and median palatal raphe (mandatory per protocol).
Posterior boundary: AT the vibrating line (junction of hard and soft palate); confirm with T-burnisher or 'ah' line marking.
Anterior boundary: extends to lingual surfaces of anterior teeth (NOT covering gingival margin — finish on tooth surface above gingival third).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector; smooth, polished tongue-facing surface.

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via the gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Block out: all undercuts NOT engaged by clasps have been blocked out on the master cast with hard baseplate wax (per surveyor protocol). Lab to verify block-out integrity before duplicating cast for framework investing.

Distal extension saddle acrylic: must COMPLETELY engage the BUCCAL sulcus (Huddle 6 Q11). Palatal coverage is provided by the major connector — saddle extension is buccal-only on the maxilla.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "A-P Strap",
    "alternativeRationale": "Full Palatal Plate selected for Kennedy Class I with ≤4 abutments: bilateral distal extensions leave no posterior tooth support, and remaining anterior teeth alone cannot stabilize an A-P Strap. Broad palatal coverage is required for maximum tissue-supported stability. Bystander teeth (present but not flanking any span) are excluded from the count.",
    "note": "0.5mm beading on tissue side",
    "rationale": "Connector of choice when few abutments remain (≤4 abutments, typically distributed). Maximum stability + retention via broad palatal coverage; posterior border AT vibrating line. Rigid plate; not for severe gag reflex patients.",
    "tier": "judgment",
    "type": "Full Palatal Plate",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class I (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
    {
      "message": "Maxillary Kennedy Class I distal extension: Occlusion — REQUIRES balancing contacts (in addition to group function on remaining natural teeth). Set posterior denture teeth LATERAL to the residual alveolar ridge (cross-arch loading consideration — distributes occlusal force across the palate). At wax-rim try-in, verify simultaneous bilateral contacts in lateral excursions on denture teeth; natural-tooth side maintains group function with no interferences.",
      "severity": "info",
      "type": "max-class-i-balanced-required",
    },
  ],
}
`;
